Added start button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </div> 
         <div class="buttons_div">
             <button class="js-pause">Pause!</button>
-            <button class="js-reset">Reset</button>
+            <button class="js-reset">Reset!</button>
+            <button class="js-start">Start!</button>
         </div> 
     </div>
     <script src="stopwatch.js"> </script>
